--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@chakra-ui/react": "^1.6.9",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "jsonwebtoken": "^8.5.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
