--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URI "mongodb://localhost:27017/partcombinatornext"
-URL_SERVER  "http://localhost:3000"
+MONGODB_URI = "mongodb://localhost:27017/partcombinatornext"
+URL_SERVER = "http://localhost:3000"
 PASS_SEC = PASSWORDNEXT
 JWT_SEC = NEXT_PASS
 TOKEN=TOKENNEXT
