--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ URL_SERVER = "http://localhost:3000"
 PASS_SEC = PASSWORDNEXT
 JWT_SEC = NEXT_PASS
 TOKEN=TOKENNEXT
-NAME_APP = Partcombinator
+NAME_APP = PartCombinator
